@@ -1,4 +1,11 @@
-2007-11-08  Dan Williams  <dcbw@redhat.com>
+2007-11-09  Dan Williams  <dcbw@redhat.com>
+
+	* src/utils/Makefile.am
+	  src/utils/crypto.c
+	  src/utils/test-crypto.c
+		- Spin crypto test code off into it's own tool
+
+2007-11-09  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
 	  src/vpn-password-dialog.c
